# meme-factory-solana

./: .gitignore  Anchor.toml  COMPLETE_DEPLOYMENT_GUIDE.md  ISSUES_AND_FIXES_REPORT.md  QUICK_REFERENCE.md  README.md  README_START_HERE.md  apply-frontend-fix.sh  create-pr-solana.sh  initialize-program.js  initialize-simple.cjs  lib.rs  lib_fixed.rs  package-lock.json  package.json  programs_cargo.toml  update-ui-idl.sh  verify-deployment.sh
backend/: package-lock.json  package.json  server.js
backups/20251031_214447/: Cargo.toml.backup  lib.rs.backup
backups/20251031_215450/: Cargo.toml.backup
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.jsx.backup  App.jsx.bak  App.jsx.working  TokenTrading.jsx  TrendingMemes.jsx  YouTubeTrending.jsx  constants.js  createTokenTx.js  meme_chain.json  meme_chain_solana.json  useRedditTrending.js
programs/meme-chain-solana/: Cargo.toml
programs/meme-chain-solana/src/: lib.rs  lib.rs.backup  lib.rs.save  selling script
scripts/: buy-tokens.ts  check-protocol.ts  create-test-token.ts  initialize.ts  inspect-token.ts  list-my-tokens.ts  sell-tokens.ts
tests/: initialize.ts.old  meme-chain-solana.ts.old  meme-chain.ts  token-factory.ts.disabled
