[package]
name = "meme-chain-solana"
version = "0.1.0"
description = "Anti-PVP/Anti-Bundling/Anti-Bot Launchpad for Solana Meme Tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meme_chain_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"